2002-07-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam-quanting.cc (score_forbidden_quants): split beam
	quanting functionality.
	(quanting): argh. Forgot how linear interpolation works. Bugfix.
	

	* Documentation/index.texi (Top): add whole-big-page documentation.

	* lily/side-position-interface.cc (general_side_position):
	Subtract parent offset iso. adding it. (Huh? How could this have
	worked?)

	* lily/clef-engraver.cc (stop_translation_timestep): add staff to
	OctavateEight support.

	* scripts/lilypond-book.py: add smallverbatim option.

	* lily/beam.cc (quanting): bugfix. Behave sanely when no visible
	stems.

	* lily/accidental-placement.cc (position_accidentals): add padding
	property. Increase default setting to 0.2. 

2002-07-15  Han-Wen  <hanwen@cs.uu.nl>

	* lily/paper-column.cc (before_line_breaking): urg. bugfix.

	* lily/separating-line-group-engraver.cc (finalize): don't replace
	right-items, but add to list. This fixes a bug when a staff ends
	with cross-staff voice switching away.
 
2002-07-14  Han-Wen  <hanwen@cs.uu.nl>

	* input/mutopia/GNUmakefile: move mutopia/ to input/mutopia/

	* lily/beam.cc (quanting): add explicit support for cross-staff
	beaming: make slope penalty larger.

	* lily/beam.cc: use common refpoints throughout. This fixes many
	cross staff issues.
 
	* lily/paper-column.cc (before_line_breaking): bug fix.

	* lily/volta-engraver.cc (process_music): do something sensible if
	no staffs found. 

	* scripts/lilypond-book.py (make_pixmap): opps. Do png conversion
	only once. 

	* Documentation/user/refman.itely (Global layout): made section on
	global layout, added spacing documentation.

	* lily/staff-symbol.cc (brew_molecule): change ragged right for
	staff symbols. See comments.

2002-07-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/voice-devnull-engraver.cc (acknowledge_grob): Use proper
	spelling for always.  In solo a due mode, kill spanners when the
	other thread has solo.
